--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ img {
    padding-left: 10px;
    font-size: 76px;
    letter-spacing: -3px;
-   color:#FF826E;
+   color:black;
    font-family: 'Ubuntu Condensed';
 }
 
@@ -64,20 +64,19 @@ img {
 
 .loginMenu a:link, a:visited {
      
-      background-color: #FCD770;
+      background-color: #b0d880;
       color: black;
-      border: 2px solid #FCD770;
+      border: 2px solid #b0d880;
       border-radius: 8px;
       margin-left: 10px;
       padding: 15px 25px;
       text-align: center;
       text-decoration: none;
       transition: border-color 0.5s, background-color 0.5s, color 0.5s;
-
 }
 
 .loginMenu a:hover, a:active {
-   background-color:#b4dd7f;
+   background-color:#9fbd7a;
    border-color: transparent;
 }
 
@@ -93,4 +92,39 @@ img {
    background-color:whitesmoke;
    border-bottom: 2px solid black;
    padding-bottom: 1px;
+}
+
+.leftMain{
+   margin-top: 50px;
+   padding-left: 50px;
+   border: 1px solid black;
+   width: 60%;
+   height: 400px;
+   float: left;
+   /* Jest opcja aby usunąć ta klasę bo jest zduplikowana? */
+}
+
+.rightMain{
+   float: left;
+   margin-top: 50px;
+   border: 1px solid black;
+   width: 30%;
+   height: 400px;
+}
+
+.leftMain p{
+   font-size: 46px;
+   font-weight: 900;
+   margin-top: 0;
+}
+
+.leftMain > ul{
+   padding-left: 0;
+}
+
+.leftMain > ul > li{
+   font-family: 'Sofia Pro', sans-serif;
+   list-style-type: none;
+   letter-spacing: 1px;
+   font-size: 24px;;
 }
