--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ img {
 
 .leftMain{
    margin-top: 5rem;
-
    width: 40vw;
    float: left;
    /* Jest opcja aby usunąć ta klasę bo jest zduplikowana? */
@@ -103,7 +102,7 @@ img {
 
 .rightMain{
    float: left;
-   margin-top: 10rem;
+   margin-top: 12rem;
    width: 28vw;   
 }
 
@@ -164,4 +163,11 @@ input[type=submit]:hover{
 ::placeholder {
    color: rgb(90, 86, 86);
    opacity: 1; 
+ }
+ 
+ #mainChart{
+   width: 80%;
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
  }
