Added menu page

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -7,4 +7,5 @@
 .icon-money-1:before { content: '\e805'; } /* '' */
 .icon-wallet:before { content: '\e806'; } /* '' */
 .icon-ok:before { content: '\e807'; } /* '' */
+.icon-cog:before { content: '\e808'; } /* '' */
 .icon-money:before { content: '\f0d6'; } /* '' */
