--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?43157707');
-  src: url('../font/fontello.eot?43157707#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?43157707') format('woff2'),
-       url('../font/fontello.woff?43157707') format('woff'),
-       url('../font/fontello.ttf?43157707') format('truetype'),
-       url('../font/fontello.svg?43157707#fontello') format('svg');
+  src: url('../font/fontello.eot?49923757');
+  src: url('../font/fontello.eot?49923757#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?49923757') format('woff2'),
+       url('../font/fontello.woff?49923757') format('woff'),
+       url('../font/fontello.ttf?49923757') format('truetype'),
+       url('../font/fontello.svg?49923757#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?43157707#fontello') format('svg');
+    src: url('../font/fontello.svg?49923757#fontello') format('svg');
   }
 }
 */
@@ -61,5 +61,9 @@
 .icon-dollar:before { content: '\e804'; } /* '' */
 .icon-money-1:before { content: '\e805'; } /* '' */
 .icon-wallet:before { content: '\e806'; } /* '' */
-.icon-ok:before { content: '\e807'; font-size: 36px; color: #7ca842;} /* '' */
+.icon-ok:before { content: '\e807'; } /* '' */
+.icon-cog:before { content: '\e808'; 
+  font-size: 2.0rem;
+  color: rgb(61, 61, 61);
+} /* '' */
 .icon-money:before { content: '\f0d6'; } /* '' */
