--- a/sass/_customVariables.scss
+++ b/sass/_customVariables.scss
@@ -1,14 +1,10 @@
-//custom variables
+//colors
 $primary: black; 
 $light: #B0D880;
 $success: #87bb48;
 $info: #FCD770;
 
-$custom-theme-colors: (
-   "reddish": #ff826e
-);
-
-
-// $font-family-sans-serif: 'Montserrat', sans-serif;
-
+//inputs
+$input-focus-border-color: #87bb48;    
+$input-border-width: 2px;
 
