--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,6 @@ form .btn
 
 #main h1{
    font-family: 'Encode Sans', sans-serif;
-   font-size: 2.2rem;
    margin-bottom: 2rem;
 }
 
@@ -57,6 +56,22 @@ ul.text-start{
    margin-bottom: 0.4rem;
 }
 
+@media screen and (max-width: 600px) {
+   #main li span {
+     font-size: 1.05rem;
+     letter-spacing: 0;
+     left: 3px;
+   }
+ }
+
+ @media screen and (min-width:601px) and (max-width: 990px) {
+   #main li span {
+     font-size: 1.25rem;
+     letter-spacing: 0;
+     left: 3px;
+   }
+ }
+
 li span{
    position: relative;
    left: 20px;
@@ -67,13 +82,8 @@ i{
 }
  
 label{
-   font-size: 1.2rem;
    color: rgb(98, 97, 97);
 } 
-
-/* footer {
-   margin-top: 10rem;
-} */
 
 
 
