--- a/sass/_customVariables.scss
+++ b/sass/_customVariables.scss
@@ -3,6 +3,7 @@ $primary: black;
 $light: #B0D880;
 $success: #87bb48;
 $info: #FCD770;
+$secondary: #FF826E;
 
 //inputs
 $input-focus-border-color: #87bb48;    
