--- a/sass/_customVariables.scss
+++ b/sass/_customVariables.scss
@@ -1,11 +1,16 @@
+
+
 //colors
 $primary: black; 
 $light: #B0D880;
 $success: #87bb48;
 $info: #FCD770;
 $secondary: #FF826E;
+$warning: rgb(240, 233, 142);
 
 //inputs
 $input-focus-border-color: #87bb48;    
 $input-border-width: 2px;
+
+
 
